# sbc_auth

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
apps/accounting/: apps.py
apps/commercial/: apps.py  urls.py
apps/core/: models.py  urls.py  views.py
apps/core/static/css/: custom.css  feito.css  monotony.css  side_nav.css  tequila.css
apps/core/static/js/: sbc-0.3.js  sbc.js  side-menu.js
apps/core/templates/: base.html  base_modal.html  card.html
apps/items/: apps.py
apps/partners/: admin.py  apps.py  filters.py  forms.py  models.py  tables.py  urls.py  views.py
apps/partners/migrations/: 0001_initial.py  0002_initial.py
apps/sbc_auth/: admin.py  apps.py  forms.py  managers.py  models.py  urls.py  views.py
apps/sbc_auth/migrations/: 0001_initial.py
apps/sbc_user/: admin.py  apps.py  managers.py  models.py  urls.py  views.py
apps/sbc_user/migrations/: 0001_initial.py
apps/tenant/: admin.py  apps.py  middleware.py  models.py
apps/tenant/migrations/: 0001_initial.py
locale/pt_BR/LC_MESSAGES/: django.mo  django.po
proj/: settings.py  urls.py
templates/: 404.html  base.html  dashboard.html  index.html  login.html
templates/account/: login2.html
templates/allauth/layouts/: base.html  entrance.html
templates/cotton/: base.html  card.html  card_center_hv.html  center_h.html  center_hv.html  center_hv100.html  content.html  div.html  loren.html  modal.html  side_bar.html  sidebar_iten.html  sidebar_link.html  spinner.html  top_bar.html  top_bar_site.html
(+23 files in other folders)
