[project]
name = "sbc-auth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crispy-bootstrap5>=2025.4",
    "cryptography>=45.0.2",
    "django>=5.2.1",
    "django-allauth>=65.8.1",
    "django-cotton>=2.1.2",
    "django-crispy-forms>=2.4",
    "pyjwt<2.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "whitenoise>=6.9.0",
]
